data/soft_flag_samples.txt
python :   File "<string>", line 17
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 17:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'  type={inv[" type\]}
          ^
SyntaxError: unterminated string literal (detected at line 17)
